[gd_scene load_steps=6 format=3 uid="uid://dse25h8h1bw3n"]

[ext_resource type="Script" path="res://World/Maps/MapBorders.gd" id="1_l3yer"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_utvxw"]
normal = Vector2(0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_5yvla"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_hpfoq"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_r4j8u"]
normal = Vector2(-1, 0)

[node name="MapBorders" type="Node2D"]
script = ExtResource("1_l3yer")

[node name="NorthBorder" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="NorthBorder"]
shape = SubResource("WorldBoundaryShape2D_utvxw")

[node name="SouthBorder" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SouthBorder"]
shape = SubResource("WorldBoundaryShape2D_5yvla")

[node name="WestBorder" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="WestBorder"]
shape = SubResource("WorldBoundaryShape2D_hpfoq")

[node name="EastBorder" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EastBorder"]
shape = SubResource("WorldBoundaryShape2D_r4j8u")
